fix activity stream close button alignment

--- a/softwrench.sw4.activitystream/web_content/activitystream/styles/activitystream.scss
+++ b/softwrench.sw4.activitystream/web_content/activitystream/styles/activitystream.scss
@@ -68,7 +68,6 @@
     }
 
     header {
-
         h2 {
             font-weight: bold;
             font-size: 14px;
@@ -97,13 +96,14 @@
         float: left;
     }
 
-    .hide-toggle .button {
-        padding: 10px 11px;
-        position: relative;
-        right: -3px;
-        margin-top: -13px;
-        color: #ccc;
-        width: 14px;
+    .hide-toggle {
+        .button {
+            padding: 5px;
+            margin-top: -5px;
+            margin-right: 5px;
+            color: #ccc;
+            width: 14px;
+        }
     }
 
     .mobile header .button {
@@ -168,9 +168,9 @@
 
         .text {
             width: 50%;
-            width: -moz-calc(100% - 60px);
-            width: -webkit-calc(100% - 60px);
-            width: calc(100% - 60px);
+            width: -moz-calc(100% - 65px);
+            width: -webkit-calc(100% - 65px);
+            width: calc(100% - 65px);
 
             .info {
                 a, .by {
